# traderutils

./: .gitignore  pyproject.toml  readme.md  setup.py
pip-wheel-metadata/traderutils-0.1.0.dist-info/: METADATA
traderutils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
traderutils/sources/: historical.py
traderutils/stores/bigquery/: __init__.py  adapters.py
