[tool.poetry]
name = "traderutils"
version = "0.1.0"
description = ""
authors = ["Alex Bausk <bauskas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
