[tool.poetry]
name = "traderutils"
version = "0.1.2"
description = ""
authors = ["Alex Bausk <bauskas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-bigquery = "^1.16"
cryptography = "^2.8"
python-dateutil = "^2.8"
requests = "^2.22"

[tool.poetry.dev-dependencies]

# [build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
